<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.epatrois.td2.VilleInfo">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temps"
                    android:id="@+id/textView24"
                    android:layout_below="@+id/textView"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Beau temps"
                    android:id="@+id/textViewTemps"
                    android:layout_alignBottom="@+id/textView2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_column="39"
                    android:layout_gravity="top|right" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:id="@+id/textView7"
                    android:layout_below="@+id/textView"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="10 °"
                    android:id="@+id/textViewTemperature"
                    android:layout_alignBottom="@+id/textView2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_column="39"
                    android:layout_gravity="top|right" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/region"
                    android:id="@+id/textView2"
                    android:layout_below="@+id/textView"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="PACA"

                    android:id="@+id/textViewRegion"
                    android:layout_alignBottom="@+id/textView2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_column="39"
                    android:layout_gravity="top|right" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="59dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pays"
                    android:id="@+id/textView"
                    android:layout_below="@+id/scrollView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="France"
                    android:id="@+id/textViewPays"
                    android:layout_above="@+id/textView2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_column="39"
                    android:layout_gravity="top|right" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/population"
                    android:id="@+id/textView4"
                    android:layout_alignBottom="@+id/textView6"
                    android:layout_alignLeft="@+id/textView3"
                    android:layout_alignStart="@+id/textView3"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="5 million"
                    android:id="@+id/textViewPopulation"
                    android:layout_alignTop="@+id/textView4"
                    android:layout_alignLeft="@+id/textViewSuperficie"
                    android:layout_alignStart="@+id/textViewSuperficie"
                    android:layout_column="39"
                    android:layout_gravity="top|right" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maire"
                    android:id="@+id/textView5"
                    android:layout_below="@+id/textView4"
                    android:layout_alignLeft="@+id/textView4"
                    android:layout_alignStart="@+id/textView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Jean Claude Gaudin Skywalker"
                    android:id="@+id/textViewMaire"
                    android:layout_alignBottom="@+id/textView5"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_column="39"
                    android:layout_gravity="top|right" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/superficie"
                    android:id="@+id/textView3"
                    android:layout_below="@+id/textView2"
                    android:layout_alignLeft="@+id/textView2"
                    android:layout_alignStart="@+id/textView2"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="320 km2"
                    android:id="@+id/textViewSuperficie"
                    android:layout_alignBottom="@+id/textView3"
                    android:layout_alignRight="@+id/textViewRegion"
                    android:layout_alignEnd="@+id/textViewRegion"
                    android:layout_column="39"
                    android:layout_gravity="top|right" />

            </TableRow>

        </TableLayout>
    </ScrollView>

</RelativeLayout>
